# AI-practical-task-2

./: .env.example  README.md  pyproject.toml
src/naive_bayes_knn_algorithms/: __main__.py  logging.py  model_runner.py  preprocessor.py  worker.py
src/naive_bayes_knn_algorithms/conf/: root.py
src/naive_bayes_knn_algorithms/evaluation/: evaluator.py
src/naive_bayes_knn_algorithms/models/: train_test.py
src/naive_bayes_knn_algorithms/trained_models/: multinomial_spam_detection_model_001.pkl  multinomial_spam_detection_model_001_vectorizer.pkl  naive_bayes_spam_detection_model_001.pkl  naive_bayes_spam_detection_model_001_vectorizer.pkl
src/naive_bayes_knn_algorithms/training/: model_trainer.py
