[project]
name = "naive_bayes_knn_algorithms"
version = "0.1.0"
description = ""
authors = [
    {name = "Cantexinho",email = "pk.developing@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
