[project]
name = "naive_bayes_knn_algorithms"
version = "0.1.0"
description = ""
authors = [
    {name = "Cantexinho",email = "pk.developing@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn<=1.6.1",
    "pandas<=2.2.3",
    "joblib<=1.4.2",
    "pydantic<=2.11.1",
    "pydantic-settings<=2.8.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
train_and_test = "naive_bayes_knn_algorithms.__main__:main"